Move away of deprecated Integer constructor.
Change-Id: I065d76e8560de9198b9465021d13d221b57d792b
Signed-off-by: Alexander Kurtakov <akurtako@redhat.com>
Reviewed-on: https://git.eclipse.org/r/146978
Tested-by: Linux Tools Bot <linuxtools-bot@eclipse.org>